# WIZ5XXSR-RP-C

./: .gitmodules  CMakeLists.txt  README.md  WIZ5XXSR-RP_c-patch.cmake  WIZ5XXSR-RP_c_sdk_version.cmake  getting_started.md
.github/workflows/: ci.yml
App/: App_main.c  App_main_linker.ld  CMakeLists.txt
Boot/: Boot_main.c  Boot_main.ld  CMakeLists.txt
port/: CMakeLists.txt
port/app/: CMakeLists.txt  WIZ5XXSR-RP_Debug.h
port/app/board/inc/: WIZ5XXSR-RP_board.h
port/app/board/src/: WIZ5XXSR-RP_board.c
port/app/configuration/inc/: common.h  segcp.h
port/app/configuration/src/: ConfigData.c  segcp.c  util.c
port/app/ioLibrary_Driver/inc/: w5x00_spi.h
port/app/ioLibrary_Driver/src/: w5x00_spi.c
port/app/mbedtls/inc/: SSLConfig.h  SSLInterface.h
port/app/mbedtls/src/: SSLInterface.c
port/app/modbus/inc/: mb.h  mbascii.h  mbrtu.h
port/app/modbus/src/: mb.c  mbascii.c  mbrtu.c  mbserial.c  mbtcp.c  mbtimer.c
port/app/platform_handler/inc/: dhcp_cb.h  dnsHandler.h  flashHandler.h  gpioHandler.h  mqttsHandler.h  storageHandler.h  uartHandler.h
port/app/platform_handler/src/: deviceHandler.c  dhcp_cb.c  dnsHandler.c  gpioHandler.c  mqttsHandler.c  storageHandler.c  timerHandler.c  uartHandler.c
port/app/serial_to_ethernet/inc/: seg.h
port/app/serial_to_ethernet/src/: seg.c
port/board/inc/: WIZ5XXSR-RP_board.h
port/boot/: CMakeLists.txt  port_common.h
port/boot/board/inc/: WIZ5XXSR-RP_board.h
port/boot/board/src/: WIZ5XXSR-RP_board.c
port/boot/configuration/inc/: ConfigData.h  common.h  segcp.h
port/boot/configuration/src/: ConfigData.c  segcp.c
port/boot/mbedtls/src/: SSL_Random.c
port/boot/platform_handler/inc/: deviceHandler.h  timerHandler.h
port/boot/platform_handler/src/: deviceHandler.c  flashHandler.c  gpioHandler.c  timerHandler.c  uartHandler.c
port/boot/serial_to_ethernet/inc/: seg.h
port/boot/serial_to_ethernet/src/: seg.c
port/configuration/inc/: ConfigData.h  common.h  segcp.h  util.h
port/configuration/src/: ConfigData.c  segcp.c
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
port/mbedtls/src/: SSLInterface.c
port/platform_handler/inc/: uartHandler.h
port/platform_handler/src/: deviceHandler.c  storageHandler.c  uartHandler.c
port/serial_to_ethernet/src/: seg.c
